<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="AUTOMATION_ENGINE_DIAGNOSTICS" Id="{abe4ac9d-925d-4d89-96b8-639221428dee}">
    <Declaration><![CDATA[TYPE AUTOMATION_ENGINE_DIAGNOSTICS :
STRUCT
	InitializationError : AUTOMATION_ENGINE_ERROR_LOG;
	CriticalError : AUTOMATION_ENGINE_ERROR_LOG;
	LastNonCriticalError : AUTOMATION_ENGINE_ERROR_LOG;
	HandleFaultError : AUTOMATION_ENGINE_ERROR_LOG;	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>