<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="AUTOMATION_ENGINE_ERROR_LOG" Id="{05878944-5a7a-4222-8e66-d9de192d2acb}">
    <Declaration><![CDATA[TYPE AUTOMATION_ENGINE_ERROR_LOG :
STRUCT
	ShortMessage : ERROR_MESSAGE;
	FullMessage : ERROR_MESSAGE;
	Source : WSTRING(300);
	LocalTimestamp : DATE_AND_TIME;	
	UtcTimestamp : DATE_AND_TIME;	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>